--- a/src/pages/Adm/Coordenacao/Laboratorios/laboratorios.module.css
+++ b/src/pages/Adm/Coordenacao/Laboratorios/laboratorios.module.css
@@ -14,6 +14,7 @@
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
+  margin-top: 0;
 }
 
 .logo {
