--- a/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
+++ b/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
+  margin-top: 0;
   background: rgba(255, 255, 255, 0.1);
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 20px;
